--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
 <head>
-	<title>App</title>
-	<script type="module" src="App.jsx"></script>
+	<title>MinApp</title>
+	<link href="./public/favicon.ico" rel="shortcut icon" />
+	<script type="module" src="./src/App.jsx"></script>
 </head>
 
 <body>
