--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>MinApp</title>
 	<link href="./public/favicon.ico" rel="shortcut icon" />
+	<link rel="stylesheet" href="index.css" />
 	<script type="module" src="./src/App.jsx"></script>
 </head>
 
